<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2e262b"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pikbac"
            android:orientation="vertical">
            <TextView
                android:id="@+id/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_margin="5dp"
                android:background="@drawable/bac_search"
                android:drawableEnd="@drawable/ic_baseline_settings_24"
                android:gravity="end"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center|bottom"
                android:text="@string/hi"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center|top"
                android:text="@string/welcome_in_salon_app"
                android:textColor="@color/whites"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1.5"
                android:elevation="50dp"
                app:cardBackgroundColor="@color/whites"
                app:cardCornerRadius="50dp"
                app:cardElevation="30dp">

                <LinearLayout
                    android:id="@+id/log_linear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layoutDirection="locale"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="35dp"-->
                    <!--android:gravity="center"-->
                    <!--android:text="@string/log_in"-->
                    <!--android:textColor="@color/black"-->
                    <!--android:textSize="25sp" />-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="casual"
                        android:gravity="center"
                        android:text="@string/log_in"
                        android:textAlignment="center"
                        android:textColor="@color/rosewood"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="casual"
                        android:gravity="center"
                        android:text="@string/to_your_account"
                        android:textAlignment="center"
                        android:textColor="@color/rosewood"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">


                        <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:layout_weight="0"-->
                        <!--android:text="@string/user_name"-->
                        <!--android:textColor="@color/black"-->
                        <!--android:textSize="18sp" />-->

                        <EditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/bac_search"
                            android:hint="@string/user_name"
                            android:padding="10dp"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:text="@string/password"-->
                        <!--android:layout_weight="0"-->
                        <!--android:textColor="@color/black"-->
                        <!--android:textSize="18sp" />-->

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/bac_search"
                            android:gravity="center"
                            android:hint="@string/password"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/LogInB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/rosy_dot"
                        android:padding="10dp"
                        android:text="@string/log_in"
                        android:gravity="center"
                        android:textColor="@color/whites"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>