<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2e262b"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_weight="1.5"
                android:elevation="50dp"
                app:cardBackgroundColor="@color/whites"
                app:cardCornerRadius="50dp"
                app:cardElevation="30dp">

                <LinearLayout
                    android:id="@+id/log_linear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layoutDirection="locale"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="35dp"-->
                    <!--android:gravity="center"-->
                    <!--android:text="@string/log_in"-->
                    <!--android:textColor="@color/black"-->
                    <!--android:textSize="25sp" />-->

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="0"
                        android:fontFamily="casual"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:background="@drawable/ic_baseline_settings_24"
                        android:textColor="@color/rosewood"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="casual"
                        android:gravity="center"
                        android:text="@string/setting"
                        android:textAlignment="center"
                        android:textColor="@color/rosewood"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="horizontal">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:text="@string/ip"
                                android:textAlignment="center"
                                android:textColor="@color/rosewood"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/ip"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/bac_search"

                                android:ems="10"
                                android:padding="10dp"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:text="@string/company_no"
                                android:textAlignment="center"
                                android:textColor="@color/rosewood"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/cono"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/bac_search"
                                android:ems="10"
                                android:gravity="center"
                                android:padding="10dp"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/save"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|end"
                            android:layout_margin="10dp"
                            android:background="@drawable/rosy_dot"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/save"
                            android:textColor="@color/whites"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>